[project]
name = "elkbledom"
version = "1.6.1"
description = "Home Assistant integration for ELK-BLEDOM and compatible Bluetooth LED controllers"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"

[tool.pyright]
# Home Assistant custom components rely on HA Core and other packages
# that are installed at runtime, not in the dev environment
reportMissingImports = "none"
reportMissingModuleSource = "none"
pythonVersion = "3.11"
